@@ -25,6 +25,7 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="#homology">Homology</A>
 <LI><A HREF="#gxd">GXD</A>
 <LI><A HREF="#go">GO</A>
+<LI><A HREF="#fantom">Fantom2</A>
 <LI><A HREF="#nomenclature">Nomenclature</A>
 <LI><A HREF="#strains">Strains</A>
 <LI><A HREF="#dataloads">Data Loads</A>
@@ -147,6 +148,16 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/usrlocalmgi/qcreports_db/output/MRK_GOIEA_A.rpt">Genes (neither 'RIKEN' or 'expressed' or 'EST') with GO Associations of evidence IEA only and reference count excludes data loads and GenBank submissions</A>
 <LI><A HREF="/usrlocalmgi/qcreports_db/output/MRK_GOIEA_B.rpt">Genes (neither 'RIKEN' or 'expressed' or 'EST') with GO Associations of evidence IEA only</A>
 <LI><A HREF="/usrlocalmgi/qcreports_db/output/MRK_GOIEA_C.rpt">Genes (neither 'RIKEN' or 'expressed' or 'EST') with GO Associations of evidence IEA only and reference count includes only data loads and GenBank submissions</A>
+</OL>
+
+<A NAME="fantom"><B>Fantom2</B></A>
+<OL>
+<LI><A HREF="/usrlocalmgi/qcreports_db/output/FAN2_IncompleteCluster.rpt">Incomplete Cluster</A>
+<LI><A HREF="/usrlocalmgi/qcreports_db/output/FAN2_InvalidFinalMGIID.rpt">Invalid Final MGI ID</A>
+<LI><A HREF="/usrlocalmgi/qcreports_db/output/FAN2_MultRepClone.rpt">Multiple Representative Clones</A>
+<LI><A HREF="/usrlocalmgi/qcreports_db/output/FAN2_NoRepClone.rpt">No Representative Clones</A>
+<LI><A HREF="/usrlocalmgi/qcreports_db/output/FAN2_NonRikenRepClone.rpt">non-RIKEN Representative Clones</A>
+<LI><A HREF="/usrlocalmgi/qcreports_db/output/FAN2_DiscrRepClone.rpt">Representative Clone Discrepancies</A>
 </OL>
 
 <A NAME="nomenclature"><B>Nomenclature</B></A>
