@@ -1,3 +1,10 @@
+TAG: qcreports_db-17-0-4
+DATE: 04/29/2002
+STAFF: lec
+RELEASE: A
+CHANGES:
+a) TR 3638/3639 - fantom/fantom2.py
+
 TAG: qcreports_db-17-0-3
 DATE: 04/23/2002
 STAFF: lec
